Bug 289671 - kdf does not start on opensuse 12.1 x86_64
Summary: kdf does not start on opensuse 12.1 x86_64
Status: RESOLVED FIXED
Alias: None
Product: kdf
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-23 15:34 UTC by marco
Modified: 2012-01-09 23:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description marco 2011-12-23 15:34:49 UTC
Application: kdf (v0.13)
KDE Platform Version: 4.7.2 (4.7.2) "release 5"
Qt Version: 4.7.4
Operating System: Linux 3.1.0-1.2-desktop x86_64
Distribution: "openSUSE 12.1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
I was trying to start the application. It will not start at all. Version 4.7.2-2.1.2-x86_64 opensuse 12.1

The crash can be reproduced every time.

-- Backtrace:
Application: KDiskFree (kdf), signal: Aborted
[KCrash Handler]
#6  0x00007f2c6e1efd95 in __GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f2c6e1f12ab in __GI_abort () at abort.c:93
#8  0x00007f2c6f7829f4 in qt_message_output (msgType=<optimized out>, buf=<optimized out>) at global/qglobal.cpp:2291
#9  0x00007f2c6f782baf in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, msg=0x423a70 "Error running df command... got [%s]", ap=0x7fff64e02ac8) at global/qglobal.cpp:2337
#10 0x00007f2c6f782d54 in qFatal (msg=<optimized out>) at global/qglobal.cpp:2520
#11 0x000000000041b9e5 in DiskList::dfDone (this=0x7a2ba8) at /usr/src/debug/kdeutils-4.7.2/kdf/disklist.cpp:375
#12 0x000000000041c5fc in DiskList::qt_metacall (this=0x7a2ba8, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff64e02f50) at /usr/src/debug/kdeutils-4.7.2/build/kdf/disklist.moc:84
#13 0x00007f2c6f88559a in QMetaObject::activate (sender=0x7afd10, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff64e02f50) at kernel/qobject.cpp:3287
#14 0x00007f2c6f81260f in QProcess::finished (this=<optimized out>, _t1=1, _t2=QProcess::NormalExit) at .moc/release-shared/moc_qprocess.cpp:142
#15 0x00007f2c6f817316 in QProcessPrivate::_q_processDied (this=0x7b1040) at io/qprocess.cpp:1051
#16 0x00007f2c6f817919 in QProcess::qt_metacall (this=0x7afd10, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0x7fff64e030e0) at .moc/release-shared/moc_qprocess.cpp:115
#17 0x00007f2c6fcc87f8 in KProcess::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkdecore.so.5
#18 0x00007f2c6f88559a in QMetaObject::activate (sender=0x7d48b0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff64e030e0) at kernel/qobject.cpp:3287
#19 0x00007f2c6f8cf16e in QSocketNotifier::activated (this=<optimized out>, _t1=15) at .moc/release-shared/moc_qsocketnotifier.cpp:89
#20 0x00007f2c6f88d24b in QSocketNotifier::event (this=0x7d48b0, e=0x7fff64e03750) at kernel/qsocketnotifier.cpp:317
#21 0x00007f2c6ea24c34 in notify_helper (e=0x7fff64e03750, receiver=0x7d48b0, this=0x651ae0) at kernel/qapplication.cpp:4481
#22 QApplicationPrivate::notify_helper (this=0x651ae0, receiver=0x7d48b0, e=0x7fff64e03750) at kernel/qapplication.cpp:4453
#23 0x00007f2c6ea29ac1 in QApplication::notify (this=0x7fff64e03a00, receiver=0x7d48b0, e=0x7fff64e03750) at kernel/qapplication.cpp:4360
#24 0x00007f2c7077ee36 in KApplication::notify (this=0x7fff64e03a00, receiver=0x7d48b0, event=0x7fff64e03750) at /usr/src/debug/kdelibs-4.7.2/kdeui/kernel/kapplication.cpp:311
#25 0x00007f2c6f87281c in QCoreApplication::notifyInternal (this=0x7fff64e03a00, receiver=0x7d48b0, event=0x7fff64e03750) at kernel/qcoreapplication.cpp:787
#26 0x00007f2c6f89cc27 in sendEvent (event=0x7fff64e03750, receiver=<optimized out>) at kernel/qcoreapplication.h:215
#27 socketNotifierSourceDispatch (source=0x6552d0) at kernel/qeventdispatcher_glib.cpp:110
#28 0x00007f2c6a0ed58d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f2c6a0edd88 in ?? () from /usr/lib64/libglib-2.0.so.0
#30 0x00007f2c6a0edf59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#31 0x00007f2c6f89d50f in QEventDispatcherGlib::processEvents (this=0x62f2e0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#32 0x00007f2c6eac7f9e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007f2c6f871a22 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#34 0x00007f2c6f871c1f in QEventLoop::exec (this=0x7fff64e03990, flags=...) at kernel/qeventloop.cpp:201
#35 0x00007f2c6f875de7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#36 0x000000000040dfc1 in main (argc=1, argv=0x7fff64e03c28) at /usr/src/debug/kdeutils-4.7.2/kdf/kdf.cpp:99

Reported using DrKonqi
Comment 1 Christoph Feck 2011-12-23 16:22:54 UTC
Could you provide the output of the following Konsole command:

LANG=en_US df -kT
Comment 2 marco 2011-12-23 19:48:41 UTC
This is the output

marco@laptop:~> lang=en_US df -kT
df: `/root/.gvfs': Permission denied
Filesystem     Type     1K-blocks     Used Available Use% Mounted on
rootfs         rootfs    20641788  9987300   9605864  51% /
devtmpfs       devtmpfs   2016084        8   2016076   1% /dev
tmpfs          tmpfs      2023756     2076   2021680   1% /dev/shm
tmpfs          tmpfs      2023756      728   2023028   1% /run
/dev/sda2      ext4      20641788  9987300   9605864  51% /
tmpfs          tmpfs      2023756        0   2023756   0% /sys/fs/cgroup
tmpfs          tmpfs      2023756      728   2023028   1% /var/lock
tmpfs          tmpfs      2023756        0   2023756   0% /media
tmpfs          tmpfs      2023756      728   2023028   1% /var/run
/dev/sda3      ext4     131121692 43088264  86967724  34% /home
Comment 3 marco 2011-12-23 19:53:34 UTC
Small typo with case, but LANG or lang both give the same output
Comment 4 Christoph Feck 2012-01-05 19:35:46 UTC
https://git.reviewboard.kde.org/r/103633/
Comment 5 Christoph Feck 2012-01-09 23:07:33 UTC
Git commit 15f1499e3c70d8ba8225e1b4cc712b60516a3552 by Christoph Feck.
Committed on 10/01/2012 at 00:04.
Pushed by cfeck into branch 'KDE/4.8'.

Skip over potential error messages from "df"
REVIEW: 103633
FIXED-IN: 4.8.0

M  +9    -2    disklist.cpp

http://commits.kde.org/kdf/15f1499e3c70d8ba8225e1b4cc712b60516a3552
Comment 6 Christoph Feck 2012-01-09 23:07:39 UTC
Git commit eebacdb8703b164c8bb19e98ba7765b3a19b3528 by Christoph Feck.
Committed on 10/01/2012 at 00:04.
Pushed by cfeck into branch 'master'.

Skip over potential error messages from "df"
REVIEW: 103633
FIXED-IN: 4.8.0
(cherry picked from commit 15f1499e3c70d8ba8225e1b4cc712b60516a3552)

M  +9    -2    disklist.cpp

http://commits.kde.org/kdf/eebacdb8703b164c8bb19e98ba7765b3a19b3528