Skip over potential error messages from "df"

BUG: 289671
REVIEW: 103633
FIXED-IN: 4.8.0